--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container-fluid">	
-		<a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo"><h3>MBY Pet Rescue & Sanctuary</h3></a>
+		<a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo"><h1>MBY Pet Rescue & Sanctuary</h1></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbaResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -32,16 +32,13 @@
 					<a class="nav-link" href="#">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Gallery</a>
+					<a class="nav-link" href="gallery.html">Gallery</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Adopt</a>
+					<a class="nav-link" href="adopt.html">Adopt</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">News</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact Us</a>
+					<a class="nav-link" href="contact.html">Contact Us</a>
 				</li>
 			</ul>
 		</div>
@@ -51,10 +48,10 @@
 <!-- Main container -->
 <div class="container-fluid padding" id="main-container">
 	<div class="row padding"> 
-	<div class="col-lg-8 col-sm-6 col-xs-12 content" id="content">
+	<div class="col-lg-9 col-md-6 col-sm-12 content" id="content">
 		<div class="about-content clear">
 		<h4 class="display-4">About Us</h4>
-		
+			
 		<img src="assets/images/about.jpg" alt="about image" id="about-image">
 			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -62,7 +59,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>	
-
+			<p class="text-muted"><em>Photo credit: JL Javier - CNN Phil.</em></p>
 			<hr class="light">
 
 		<div class="founder-content clear">	
@@ -73,24 +70,44 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
 		</div>
+		<p class="text-muted"><em>Photo credit: Marita Baquiran</em></p>
 	</div> <!-- end row -->	
 
 			
-		<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-			<div class="row padding">
-    			<div class="hovereffect" id="hover">
-       			 <img class="img-responsive" src="assets/images/sidebar1.jpg" alt="sidebar image" id="sidebar-image">
-        			<div class="overlay">
-          			 <h2>Make a difference!</h2>
-          				 <a class="info" href="#">Donate Now!</a>
-          			</div> <!-- end overlay -->
-
-    			</div> <!-- end hover effect -->
-    			<blockquote class="blockquote text-center">
-  					<p class="mb-0">All creatures are deserving of a life free from fear and pain.</p>
-  					<footer class="blockquote-footer">Maura Cummings <cite title="Source Title">veganquotes / Tumblr </cite></footer>
-				</blockquote>
-			</div> <!-- end row -->
+		<div class="col-lg-3 col-md-6">
+					<div class="hovereffect" id="hover">
+						<div class="card">
+							<img class="card-img-top" src="assets/images/logo.png" id="card-img">
+							<div class="card-body">
+								<h5 class="card-title">MBY Pet Rescue & Sanctuary</h5>
+								<h6 class="card-subtitle mb-2 text-muted">Donations needed:</h6>
+									 <ul class="list-group list-group-flush">
+									    <li class="list-group-item">Medicines</li>
+									    <li class="list-group-item">Soap and Shampoo</li>
+									    <li class="list-group-item">Dog & Cat Food</li>
+									    <li class="list-group-item">Vitamins</li>
+									    <li class="list-group-item">Utility Soap</li>
+									    <li class="list-group-item">Cash or Check in Kind</li>
+ 										 </ul>
+							</div> <!-- end body -->
+						</div> <!-- end card -->
+        					<div class="overlay">
+          						 <h2>Make a difference!</h2>
+          						 <a class="info" href="#">Donate Now!</a>
+          					</div> <!-- end overlay -->
+          				<div class="card">
+							<img class="card-img-top" src="assets/images/about-card.jpg" id="card-img">
+							<div class="card-body">
+								 <blockquote class="blockquote mb-0 card-body">
+      								<p id="blockquote-text">Animals are such agreeable friends - they ask no questions; they pass no criticisms</p>
+      								<footer class="blockquote-footer">
+       								 	<small class="text-muted">
+          									Credits: George Eliot - Author | Photo by JL JAVIER-CNN Phil.<cite title="Source Title">https://www.brainyquote.com/quotes/george_eliot_104038?src=t_pet. / http://cnnphilippines.com/life/culture/2017/01/12/dog-shelter.html</cite>
+       									 </small>
+     								 </footer>
+    							</blockquote>
+							</div> <!-- end hover effect -->
+						</div>	<!-- end col 3 -->	
 
 		</div> <!-- end content -->
 </div><!--  end main container -->
@@ -116,7 +133,7 @@
 				<p> Rizal 1960, Philippines </p>
 			</div>
 	
-		<div class="col-md-4">
+		<div class="col-md-4 offset-md-4">
 			<hr class="light">
 				<h5>Bank Accounts</h5>
 				<hr class="light">
@@ -124,14 +141,7 @@
 				<p>BDO Account: 0066-3021-5825</p>
 				<p>BPI Account: 4059-3146-37</p>
 		</div>
-			<div class="col-md-4">
-			<hr class="light">
-				<h5>Donations Needed</h5>
-				<hr class="light">
-				<p>Cash/Check in Kind</p>
-				<p>Dog & Cat Food</p>
-				<p>Soaps and Medicines</p>
-		</div>
+
 		<div class="col-12">
 			<hr class="light">
 			<h5>&copy;MBY Pet Rescue & Sanctuary</h5>
