--- a/gallery.html
+++ b/gallery.html
@@ -24,14 +24,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container-fluid">	
-		<a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo"><h3>MBY Pet Rescue & Sanctuary</h3></a>
+		<a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo"><h1>MBY Pet Rescue & Sanctuary</h1></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbaResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbaResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="about.html">About</a>
@@ -40,13 +40,10 @@
 					<a class="nav-link" href="#">Gallery</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Adopt</a>
+					<a class="nav-link" href="adopt.html">Adopt</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">News</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact Us</a>
+					<a class="nav-link" href="contact.html">Contact Us</a>
 				</li>
 			</ul>
 		</div>
@@ -56,79 +53,103 @@
 <!-- Main page  -->
 <div class="container-fluid padding">
 	<div class="row">
-		<div class="col-lg-9 col-md-8">
+		<div class="col-lg-9 col-md-6 com-sm-12">
 			<div class="photo-gallery">
-			<h4 class="display-4">Photos</h4>
-				<a href="assets/images/gallery/image1.jpg" data-lightbox="dogy" ><img src="assets/images/gallery/image1.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image2.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image2.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image3.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image3.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image4.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image4.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image5.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image5.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image6.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image6.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image7.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image7.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image8.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image8.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image9.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image9.jpg" alt="Dog pic"></a>
-				<a href="assets/images/gallery/image10.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image10.jpg" alt="Dog pic"></a>
+			<h2 class="display-4">Photos</h2>
+				<p class="lead"><em>Photo credits to: </em><a href="https://www.facebook.com/mbypras/">https://www.facebook.com/mbypras/</a> </p>
+					<a href="assets/images/gallery/image1.jpg" data-lightbox="dogy" ><img src="assets/images/gallery/image1.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image2.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image2.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image3.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image3.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image4.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image4.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image5.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image5.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image6.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image6.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image7.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image7.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image8.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image8.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image9.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image9.jpg" alt="Dog pic"></a>
+					<a href="assets/images/gallery/image10.jpg" data-lightbox="dogy"><img src="assets/images/gallery/image10.jpg" alt="Dog pic"></a>
+
 			</div> <!-- end photo-gallery -->
 		
 				<hr class="light">
 					<div class="videos clear">
-						<h4 class="display-4">Videos</h4>
-						<div class="video1">
+						<h2 class="display-4">Videos</h2>
+						<p class="lead"><em>Video credits to: </em><a href="https://www.facebook.com/mbypras/">https://www.facebook.com/mbypras/</a> </p>
+						<div class="video">
 		 					<video controls>
 		 						<source src="assets/images/gallery/video1.mp4" type="video/mp4">
 		 					</video>
 		 					<p class="lead">Donations from Baytech BPO Corporation</p>
 	 					</div>
 	 					
-	 					<div class="video1">
+	 					<div class="video">
 		 					<video controls>
-		 						<source src="assets/images/gallery/video1.mp4" type="video/mp4">
+		 						<source src="assets/images/gallery/video2.mp4" type="video/mp4">
 		 					</video>
-		 					<p class="lead">Donations from Baytech BPO Corporation</p>
+		 					<p class="lead">Visitors in the sanctuary.</p>
 	 					</div>
 
-	 					<div class="video1">
+	 					<div class="video">
 		 					<video controls>
-		 						<source src="assets/images/gallery/video1.mp4" type="video/mp4">
+		 						<source src="assets/images/gallery/video3.mp4" type="video/mp4">
 		 					</video>
-		 					<p class="lead">Donations from Baytech BPO Corporation</p>
+		 					<p class="lead">Kind guests who donated 2 bags of dog food.</p>
 	 					</div>
 
-	 					<div class="video1">
+	 					<div class="video">
 		 					<video controls>
-		 						<source src="assets/images/gallery/video1.mp4" type="video/mp4">
+		 						<source src="assets/images/gallery/video4.mp4" type="video/mp4">
 		 					</video>
-		 					<p class="lead">Donations from Baytech BPO Corporation</p>
+		 					<p class="lead">500 cats and counting.</p>
 	 					</div>
 
 					</div>
 
 				</div> <!-- end videos -->
 
-				<div class="col-lg-3 col-md-4" id="sidebar">
+				<div class="col-lg-3 col-md-6" id="sidebar">
 					<div class="hovereffect" id="hover">
-       			 		<img class="img-responsive" src="#" alt="sidebar image" id="sidebar-image">
-        				<div class="overlay">
-          					 <h2>Make a difference!</h2>
-          					 <a class="info" href="#">Donate Now!</a>
-          				</div> <!-- end overlay -->
-					</div> <!-- end hover effect -->
-    			</div>	<!-- end col 3 -->	
-		
-			
-	</div> <!-- end row -->
-
-</div><!--  end container -->
+						<div class="card">
+							<img class="card-img-top" src="assets/images/logo.png" id="card-img">
+							<div class="card-body">
+								<h5 class="card-title">MBY Pet Rescue & Sanctuary</h5>
+								<h6 class="card-subtitle mb-2 text-muted">Donations needed:</h6>
+									 <ul class="list-group list-group-flush">
+									    <li class="list-group-item">Medicines</li>
+									    <li class="list-group-item">Soap and Shampoo</li>
+									    <li class="list-group-item">Dog & Cat Food</li>
+									    <li class="list-group-item">Vitamins</li>
+									    <li class="list-group-item">Utility Soap</li>
+									    <li class="list-group-item">Cash or Check in Kind</li>
+ 										 </ul>
+							</div> <!-- end body -->
+						</div> <!-- end card -->
+        					<div class="overlay">
+          						 <h2>Make a difference!</h2>
+          						 <a class="info" href="#">Donate Now!</a>
+          					</div> <!-- end overlay -->
+          				<div class="card">
+							<img class="card-img-top" src="assets/images/gallery-card.jpg" id="card-img">
+							<div class="card-body">
+								 <blockquote class="blockquote mb-0 card-body">
+      								<p id="blockquote-text">When we adopt a dog or any pet, we know it is going to end with us having to say goodbye, but we still do it. And we do it for a very good reason: They bring so much joy and optimism and happiness. They attack every moment of every day with that attitude.</p>
+      								<footer class="blockquote-footer">
+       								 	<small class="text-muted">
+          									Credits to Bruce Cameron - Author | Jilson Tiu - Photographer <cite title="Source Title">https://www.brainyquote.com/quotes/bruce_cameron_734991?src=t_pet</cite>
+       									 </small>
+     								 </footer>
+    							</blockquote>
+							</div> <!-- end hover effect -->
+						</div>	<!-- end col 3 -->	
+					</div> <!-- end row -->
+			</div><!--  end container -->
 
 
 
 
 
 <!-- footer -->
-<footer>
+<footer id="main-footer">
 	<div class="container-fluid padding" >
-
 		<div class="row text-center">
 			<div class="col-md-4">
 				<hr class="light">
@@ -141,7 +162,7 @@
 				<p> Rizal 1960, Philippines </p>
 			</div>
 	
-		<div class="col-md-4">
+		<div class="col-md-4 offset-md-4">
 			<hr class="light">
 				<h5>Bank Accounts</h5>
 				<hr class="light">
@@ -149,14 +170,7 @@
 				<p>BDO Account: 0066-3021-5825</p>
 				<p>BPI Account: 4059-3146-37</p>
 		</div>
-			<div class="col-md-4">
-			<hr class="light">
-				<h5>Donations Needed</h5>
-				<hr class="light">
-				<p>Cash/Check in Kind</p>
-				<p>Dog & Cat Food</p>
-				<p>Soaps and Medicines</p>
-		</div>
+		
 		<div class="col-12">
 			<hr class="light">
 			<h5>&copy;MBY Pet Rescue & Sanctuary</h5>
