--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container-fluid">	
-		<a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo"><h3>MBY Pet Rescue & Sanctuary</h3></a>
+		<a class="navbar-brand" href="#"><img src="assets/images/logo.png" id="logo"><h1>MBY Pet Rescue & Sanctuary</h1></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbaResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -33,16 +33,13 @@
 					<a class="nav-link" href="about.html">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Gallery</a>
+					<a class="nav-link" href="gallery.html">Gallery</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Adopt</a>
+					<a class="nav-link" href="adopt.html">Adopt</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">News</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact Us</a>
+					<a class="nav-link" href="contact.html">Contact Us</a>
 				</li>
 			</ul>
 		</div>
@@ -59,15 +56,15 @@
 <div class="corusel-inner">
 	<div class="carousel-item active">
 		<img src="assets/images/carousel1.jpg" class="d-block w-100">
-		<div class="carousel-caption ">
-			<h1 class="display-2">MBY Pet Rescue & Sanctuary</h1>
-			<h3>Home for Stray Dogs and Cats.</h3>
+		<div class="carousel-caption">
+			<h1>MBY Pet Rescue & Sanctuary</h1>
+			<h2>Home for Stray Dogs and Cats.</h2>		
 			<button type="button" class="btn btn-outline-light btn-lg">DONATE NOW</button>
 		</div>
 	</div>
 	<div class="carousel-item">
 		<img src="assets/images/carousel2.jpg" class="d-block w-100">
-		<div class="carousel-caption ">
+		<div class="carousel-caption">
 			<h3>Home for Stray Dogs and Cats.</h3>
 			<button type="button" class="btn btn-outline-light btn-lg">DONATE NOW</button>
 		</div>
@@ -75,11 +72,12 @@
 	</div>
 	<div class="carousel-item">
 		<img src="assets/images/carousel3.jpg" class="d-block w-100">
-		<div class="carousel-caption ">
+		<div class="carousel-caption">
 			<h3>Home for Stray Dogs and Cats.</h3>
 			<button type="button" class="btn btn-outline-light btn-lg">DONATE NOW</button>
 		</div>
 	</div>
+	<p><small><em>Photo credits: Jilson Tiu/NoliSoli Ph</em></small></p>
 </div>
 </div>
 
@@ -88,7 +86,7 @@
 	<div class="container-fluid padding">
 		<div class="row welcome text-center">
 			<div class="col-12">
-				<h1 class="display-4">Support Rescued Animals</h1>
+				<h2 class="display-4">Support Rescued Animals</h2>
 			</div>
 			<hr>
 			<div class="col-12">
@@ -102,20 +100,21 @@
 <div class="container-fluid padding" id="main-container">
 	<div class="row">
 		<div class="col-md-8 col-sm-6 col-xs-12 content" id="content">
-			<h4 class="display-4">Mission</h4>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<h4 class="display-4">Vission</h4>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h2 class="display-4">Mission</h2>
+				<ul>
+					<li>Reduce the number of unwanted animals through aggressive spay/neuter programs.</li>
+					<li>Provide for the well-being of companion animals in need, while adhering to our no-kill tradition and find each a lifelong, loving home.</li>
+					<li>Offer affordable wellness services and resources to pets and owners in need, targeting underserved communities, to support whole-life care.</li>
+					<li>Promote the animal-human bond through outreach, education and therapeutic programming here in the Philippines.</li>
+					<li>And, act as an advocate on behalf of animals in crisis and as an enforcer of their rights and protection through education, investigation and legislative efforts.</li>
+				</ul>
+			<h2 class="display-4">Vision</h2>
+				<ul>
+					<li>No companion animal is ever born into, nor abandoned to, homelessness for any reason.</li>
+					<li>End animal suffering, homelessness and needless euthanasia.</li>
+					<li>To see the day when our services are no longer needed and all animals are treated with respect and compassion.</li>
+				
+				</ul>
 
 	</div>	<!-- end 1st row	 -->
 		<div class="col-md-4 col-sm-6 col-xs-12 sidebar">
@@ -124,21 +123,23 @@
 					<div class="card">
 						<img class="card-img-top fluid rounded" src="assets/images/card1.jpg" alt="card image" id="card-image">
 							<div class="card-body">
-								<p class="card-text">Meet Brenda, she's been rescued in Tondo, Manila last June 2018. She had a broken spine and a skin condition, but now she's on the road to recovery.</p>
+								<p class="card-text">Meet <strong>Brenda</strong>, she's been rescued in Tondo, Manila last June 2018. She had a broken spine and a skin condition, but now she's on the road to recovery.</p>
 							</div><!--  end card-body -->
 						</div> <!-- end card -->
 
 						<div class="card">
 						<img class="card-img-top fluid" src="assets/images/card2.jpg" alt="card image" id="card-image">
 							<div class="card-body">
-								<p class="card-text">Abel here has been diagnosed with Ehrilichia. He's been rescued last May in Farview and been receiving proper treatment from the vet since.</p>
+								<p class="card-text"><strong>Abel</strong> here has been diagnosed with Ehrilichia. He's been rescued last May in Farview and been receiving proper treatment from the vet since.</p>
 							</div> <!-- end card body -->
 						</div> <!-- end card -->
 					
-					<button type="button" class="btn btn-outline-secondary btn-lg" id="sidebar-button">DONATE NOW</button>
-			</div>	<!-- end 2nd row -->	
+			</div>	<!-- end 2nd row -->
+				<div>
+					<button type="button" class="btn btn-outline-secondary btn-lg" id="button">DONATE NOW</button>
+				</div>	
 		</div> <!-- end sidebar -->
-</div>
+	</div>
 
 <!-- connect -->
 <div class="container-fluid padding">
@@ -147,13 +148,13 @@
 			<h2>Connect</h2>
 		</div>
 		<div class="col-12 social padding">
-			<a href="#"><i class="fab fa-facebook"></i></a>
+			<a href="https://www.facebook.com/mbypras/"><i class="fab fa-facebook"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
 			<a href="#"><i class="fab fa-youtube"></i></a>
 		</div>
 	</div>
 </div>
-
+</div>
 <!-- footer -->
 <footer>
 	<div class="container-fluid padding" >
@@ -185,6 +186,8 @@
 				<p>Cash/Check in Kind</p>
 				<p>Dog & Cat Food</p>
 				<p>Soaps and Medicines</p>
+				<p>Vitamins</p>
+				<p>Utility Soap</p>
 		</div>
 		<div class="col-12">
 			<hr class="light">
