--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
 
@@ -53,11 +55,7 @@
 		<h4 class="display-4">About Us</h4>
 			
 		<img src="assets/images/about.jpg" alt="about image" id="about-image">
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="lead"><strong>MBY Pet Rescue & Sanctuary</strong> was formed in the year 2007 in a subdivision in Rizal by Marita Baquiran determined to help the plight of animals in the Philippines. We are a non-profit, non-government organization that receives no government funding; we rely solely on private donations. It amassed 300 furry residents before she was asked to leave and find another place, because her neighbors found the animals too noisy. But she persisted. In 2014, she found the lot on which her animal shelter now sits. Its size and surroundings make it the perfect home for the dogs and cats under her care.</p>
 		</div>	
 			<p class="text-muted"><em>Photo credit: JL Javier - CNN Phil.</em></p>
 			<hr class="light">
@@ -65,10 +63,7 @@
 		<div class="founder-content clear">	
 		<h4 class="display-4">Founder</h4>
 		<img src="assets/images/avatar.jpg" id="avatar"> 
-			<p class="lead"><em><strong>Marita Baquiran</strong></em> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
+			<p class="lead"><em><strong>Marita Baquiran</strong></em> together with her husband Daniel Baquiran-Yasuda began holding Trap, Neuter, and Release (TNR) operations in Japan. In December 2007, she came home to the Philippines and continued her efforts here. This was when she chanced upon Beauty, an injured stray dog that found its way inside Baquiran-Yasuda’s Antipolo home on Christmas Eve. Thus MBY Pet Rescue was formed and since then Marita and Daniel has been taking care of the abandoned and neglected animals in the sanctuary.</p>	
 		</div>
 		<p class="text-muted"><em>Photo credit: Marita Baquiran</em></p>
 	</div> <!-- end row -->	
