--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
 
@@ -64,7 +66,7 @@
 		<!-- <hr class="light"> -->
 		<h1 class="display-3">Contact Details</h1>
 		<ul>
-			<li>Contact Person: Marita Baquiran <em>https://www.facebook.com/marita.baquiran.5</em></li>
+			<li>Contact Person:<strong> Marita Baquiran</strong></li>
 			<li>Address:113 Pantay St., Sitio Talaga,Baranggay Maybancal, Morong,Rizal 1960, Philippines
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.6624678831295!2d121.23717781510535!3d14.561284481942112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c06d4960cf61%3A0x5f271ba48c81e663!2sMBY+Pet+Rescue+and+Sanctuary!5e0!3m2!1sen!2sph!4v1531963552516" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></li>
 
@@ -107,7 +109,7 @@
 
 				<div class="social">
 					<h3 class="display-5">Social Media Accounts</h3>
-					<a href="#"><i class="fab fa-facebook"></i></a>
+					<a href="https://www.facebook.com/mbypras/" target="_blank"><i class="fab fa-facebook"></i></a>
 					<a href="#"><i class="fab fa-instagram"></i></a>
 					<a href="#"><i class="fab fa-youtube"></i></a>
 				</div>
