--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 
 </head>
 <body>
@@ -148,7 +150,7 @@
 			<h2>Connect</h2>
 		</div>
 		<div class="col-12 social padding">
-			<a href="https://www.facebook.com/mbypras/"><i class="fab fa-facebook"></i></a>
+			<a href="https://www.facebook.com/mbypras/" target="_blank"><i class="fab fa-facebook"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
 			<a href="#"><i class="fab fa-youtube"></i></a>
 		</div>
