--- a/gallery.html
+++ b/gallery.html
@@ -85,21 +85,21 @@
 	 					
 	 					<div class="video">
 		 					<video controls>
-		 						<source src="assets/images/gallery/videos2.mp4" type="video/mp4">
+		 						<source src="assets/images/gallery/videos2.MP4" type="video/mp4">
 		 					</video>
 		 					<p class="lead">Visitors in the sanctuary.</p>
 	 					</div>
 
 	 					<div class="video">
 		 					<video controls>
-		 						<source src="assets/images/gallery/videos3.mp4" type="video/mp4">
+		 						<source src="assets/images/gallery/videos3.MP4" type="video/mp4">
 		 					</video>
 		 					<p class="lead">Kind guests who donated 2 bags of dog food.</p>
 	 					</div>
 
 	 					<div class="video">
 		 					<video controls>
-		 						<source src="assets/images/gallery/videos4.mp4" type="video/mp4">
+		 						<source src="assets/images/gallery/videos4.MP4" type="video/mp4">
 		 					</video>
 		 					<p class="lead">500 cats and counting.</p>
 	 					</div>
